# Growth-Remodeling

./: .gitignore  README.md  environment.yml  pyproject.toml  run.py  run_all.py
comparison/: README.md  build_config.py  compare.py  run_svgrowth.py  setup_svgrowth_env.sh
configs/: ex01_kinematic_growth.yaml  ex02_constrained_mixture.yaml  ex02_kinematic_growth.yaml  ex03_constrained_mixture.yaml  ex03_homogenized_vs_full.yaml  ex04_equilibrated.yaml  ex04_homogenized_vs_full.yaml  ex05_equilibrated.yaml  ex05_stability.yaml  ex06_stability.yaml
docs/: 00_overview.md  01_biology.md  02_finite_strain.md  03_kinematic_growth.md  04_constrained_mixture.md  05_homogenized_cmm.md  06_equilibrated_cmm.md  07_stability.md
docs/videos/: README.md
exercises/: ex00_biology_and_mechanics.py  ex01_biology_and_mechanics.py  ex01_kinematic_growth.py  ex02_constrained_mixture.py  ex02_kinematic_growth.py  ex03_constrained_mixture.py  ex03_homogenized_vs_full.py  ex04_equilibrated.py  ex04_homogenized_vs_full.py  ex05_equilibrated.py  ex05_stability_and_aneurysm.py  ex06_stability_and_aneurysm.py
slides/: .gitignore  Makefile  README.md  body.tex  references.bib  slides-student.tex  slides-teacher.tex
solutions/: _check_models.py  _scenarios.py  fig00_biology_and_mechanics.py  fig00_setup.py  fig01_biology_and_mechanics.py  fig01_kinematic_growth.py  fig01_split.py  fig02_constrained_mixture.py  fig02_kinematic_growth.py  fig03_compare_all.py  fig03_constrained_mixture.py  fig04_compare_all.py  fig04_equilibrated.py  fig05_equilibrated.py  fig05_stability_and_aneurysm.py  fig06_stability_and_aneurysm.py  fig_homeostasis_states.py  make_all_figures.py  make_all_videos.py
(+30 files in other folders)
