[project]
name = "growth-remodeling"
version = "0.1.0"
description = "Hands-on teaching code comparing four growth-and-remodeling theories for soft tissue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Nicely rendered LaTeX in figure labels is optional; matplotlib's mathtext is
# used by default so a system LaTeX install is NOT required.
dev = ["ruff>=0.4"]
# MP4 export for the animations (solutions/make_all_videos.py).  Without it the
# videos still export as GIF via Pillow (a matplotlib dependency).  With it, a
# self-contained ffmpeg binary is used — no system ffmpeg needed.
video = ["imageio-ffmpeg>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gr"]

[tool.ruff]
line-length = 100
